--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
                 '0%': { transform: 'translateY(20px)', opacity: '0' },
                 '100%': { transform: 'translateY(0)', opacity: '1' },
               },
+              'fab-in': {
+                '0%': { transform: 'scale(0.5)', opacity: '0' },
+                '100%': { transform: 'scale(1)', opacity: '1' },
+              },
             },
             animation: {
               'flip-in': 'flip-in 0.4s ease-out',
               'toast-in': 'toast-in 0.3s ease-out',
+              'fab-in': 'fab-in 0.2s ease-out',
             },
           },
         },
