--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='32' height='32' rx='6' fill='%234f46e5'/%3E%3Cpath d='M12 10C12 8.89543 12.8954 8 14 8H20C21.1046 8 22 8.89543 22 10V14C22 15.1046 21.1046 16 20 16H18' stroke='white' stroke-width='2.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10 16C10 14.8954 10.8954 14 12 14H18C19.1046 14 20 14.8954 20 16V20C20 21.1046 19.1046 22 18 22H12C10.8954 22 10 21.1046 10 20V16Z' stroke='white' stroke-width='2.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lingua Cards - Language Flashcards</title>
 
