feat: Integrate Google Gemini API for AI features
Adds the `@google/genai` dependency and integrates the Gemini API into the `geminiService.ts` to provide AI-powered features like example sentences and translations. Updates `App.tsx` to utilize these new capabilities.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "dexie": "https://aistudiocdn.com/dexie@^4.0.7",
     "webworker": "https://aistudiocdn.com/webworker@^0.8.4",
-    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.5"
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.5",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0"
   }
 }
 </script>
