--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "dexie": "https://aistudiocdn.com/dexie@^4.0.7",
     "webworker": "https://aistudiocdn.com/webworker@^0.8.4",
-    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.5",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0"
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.5"
   }
 }
 </script>
