--- a/index.html
+++ b/index.html
@@ -10,39 +10,37 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#4f46e5" />
     
-
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-            },
-            keyframes: {
-              'flip-in': {
-                '0%': { transform: 'rotateY(90deg)', opacity: '0' },
-                '100%': { transform: 'rotateY(0deg)', opacity: '1' },
-              },
-               'toast-in': {
-                '0%': { transform: 'translateY(20px)', opacity: '0' },
-                '100%': { transform: 'translateY(0)', opacity: '1' },
-              },
-              'fab-in': {
-                '0%': { transform: 'scale(0.5)', opacity: '0' },
-                '100%': { transform: 'scale(1)', opacity: '1' },
-              },
-            },
-            animation: {
-              'flip-in': 'flip-in 0.4s ease-out',
-              'toast-in': 'toast-in 0.3s ease-out',
-              'fab-in': 'fab-in 0.2s ease-out',
-            },
-          },
-        },
+    <!-- Using a static build of Tailwind CSS to be Content Security Policy (CSP) compliant -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <style>
+      /* Apply custom font from Google Fonts link below */
+      body {
+        font-family: 'Inter', sans-serif;
       }
-    </script>
+      /* Define custom keyframes and animations from the original tailwind.config */
+      @keyframes flip-in {
+        0% { transform: rotateY(90deg); opacity: 0; }
+        100% { transform: rotateY(0deg); opacity: 1; }
+      }
+      @keyframes toast-in {
+        0% { transform: translateY(20px); opacity: 0; }
+        100% { transform: translateY(0); opacity: 1; }
+      }
+      @keyframes fab-in {
+        0% { transform: scale(0.5); opacity: 0; }
+        100% { transform: scale(1); opacity: 1; }
+      }
+      .animate-flip-in {
+        animation: flip-in 0.4s ease-out;
+      }
+      .animate-toast-in {
+        animation: toast-in 0.3s ease-out;
+      }
+      .animate-fab-in {
+        animation: fab-in 0.2s ease-out;
+      }
+    </style>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
