feat: Revamp profile page and fix theme switcher
Introduces a new "Recent Achievements" section on the user profile page, replacing the old "Recent Activity" log. This provides a more engaging showcase of user accomplishments.

Additionally, this commit resolves a bug with the theme switcher by updating Tailwind CSS to use the JIT CDN. This also enables better dark mode support for UI elements. The Settings UI now has improved contrast for active options in dark mode.

The profile page now also includes a link to view all earned achievements.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#4f46e5" />
     
-    <!-- Using a static build of Tailwind CSS to be Content Security Policy (CSP) compliant -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <!-- Using the Tailwind JIT CDN for full feature support including dark mode -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Apply custom font from Google Fonts link below */
       body {
