--- a/index.html
+++ b/index.html
@@ -12,33 +12,40 @@
     
     <!-- Using the Tailwind JIT CDN for full feature support including dark mode -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class', // Critical fix for theme switching
+        theme: {
+          extend: {
+            keyframes: {
+              'flip-in': {
+                '0%': { transform: 'rotateY(90deg)', opacity: '0' },
+                '100%': { transform: 'rotateY(0deg)', opacity: '1' },
+              },
+              'toast-in': {
+                '0%': { transform: 'translateY(20px)', opacity: '0' },
+                '100%': { transform: 'translateY(0)', opacity: '1' },
+              },
+              'fab-in': {
+                '0%': { transform: 'scale(0.5)', opacity: '0' },
+                '100%': { transform: 'scale(1)', opacity: '1' },
+              },
+            },
+            animation: {
+              'flip-in': 'flip-in 0.4s ease-out',
+              'toast-in': 'toast-in 0.3s ease-out',
+              'fab-in': 'fab-in 0.2s ease-out',
+            },
+          }
+        }
+      }
+    </script>
     <style>
       /* Apply custom font from Google Fonts link below */
       body {
         font-family: 'Inter', sans-serif;
       }
-      /* Define custom keyframes and animations from the original tailwind.config */
-      @keyframes flip-in {
-        0% { transform: rotateY(90deg); opacity: 0; }
-        100% { transform: rotateY(0deg); opacity: 1; }
-      }
-      @keyframes toast-in {
-        0% { transform: translateY(20px); opacity: 0; }
-        100% { transform: translateY(0); opacity: 1; }
-      }
-      @keyframes fab-in {
-        0% { transform: scale(0.5); opacity: 0; }
-        100% { transform: scale(1); opacity: 1; }
-      }
-      .animate-flip-in {
-        animation: flip-in 0.4s ease-out;
-      }
-      .animate-toast-in {
-        animation: toast-in 0.3s ease-out;
-      }
-      .animate-fab-in {
-        animation: fab-in 0.2s ease-out;
-      }
+      /* Custom animations are now handled by tailwind.config */
     </style>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
