--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "dexie": "https://aistudiocdn.com/dexie@^4.0.7",
     "webworker": "https://aistudiocdn.com/webworker@^0.8.4",
-    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.5"
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.5",
+    "buffer": "https://aistudiocdn.com/buffer@^6.0.3"
   }
 }
 </script>
